[tool.poetry]
name = "sort"
version = "0.1.0"
description = ""
authors = ["R0flcopt3r <12752060+R0flcopt3r@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
filterpy = "1.4.5"
lap = "0.4.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
